# spis

./: .dockerignore  .env  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  Makefile-ci.mk  Makefile-dev.mk  Makefile-release.mk  Makefile-setup.mk  README.md  REMEMBER.md  TODO.md  build.rs  config.schema.json  config.toml  fly.toml  release-please-config.json  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml  renovate.json5
.github/actions/toolchain/: action.yml
.github/workflows/: ci.yml  conventional-commit.yml  release-please.yml  release.yml  stale.yml
assets/: manifest.json  sw.js
assets/scripts/: Makefile  dev-ws.js
dev/: images.sh  nginx.conf
docker/: 40-user-fix.sh  Dockerfile  nginx.conf  pick-release.sh  supervisord.conf
docker/docker-entrypoint.d/: 40-nginx-user-fix.sh  50-config-override.sh  60-stock-images.sh
docker/supervisor/: supervisord.conf
examples/docker/: docker-compose.yml
examples/systemd/: nginx.conf  spis.service
gui/: Cargo.toml
gui/src/: main.rs
make/: Makefile-ci.mk  Makefile-dev.mk  Makefile-release.mk  Makefile-setup.mk  cargo-bin.sh
migrations/: 20221127_video.sql  20221210_arc_and_fav.sql  20230121_missing.sql  20241204_positions.sql
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  state.rs
spis-gui/: CHANGELOG.md  Cargo.toml  index.html  manifest.json  style.css
spis-gui/src/: api.rs  constants.rs  data.rs  filters.rs  keyboard.rs  main.rs  preview.rs  scroll.rs  signals.rs  svg.rs
spis-gui/src/data/: api.rs  loader.rs  mod.rs
spis-gui/src/dataz/: mod.rs
spis-gui/src/motions/: keyboard.rs  mod.rs  scroll.rs  swipe.rs
spis-model/: CHANGELOG.md  Cargo.toml
spis-model/src/: lib.rs
spis-server/: CHANGELOG.md  Cargo.toml
spis-server/migrations/: 20221110_images.sql  20221110_media.sql  20221210_archive.sql
spis-server/src/: lib.rs  main.rs  state.rs
spis-server/src/db/: mod.rs
spis-server/src/img/: mod.rs  prelude.rs  walker.rs
spis-server/src/med/: mod.rs  prelude.rs
spis-server/src/media/: meta.rs  metadata.rs  mod.rs  prelude.rs  processing.rs  util.rs
spis-server/src/media/images/: mod.rs
spis-server/src/media/video/: mod.rs
spis-server/src/pipeline/: mod.rs
spis-server/src/server/: convert.rs  mod.rs
spis-server/tests/: api_health.rs  api_media.rs
src/: db.rs  lib.rs  main.rs  pipeline.rs  prelude.rs
src/db/: mod.rs
src/media/: images.rs  mod.rs  util.rs  video.rs
src/media/video/: mod.rs
src/pipeline/: mod.rs
src/server/: assets.rs  commands.rs  dev.rs  mod.rs
src/server/hx/: actions.rs  bar.rs  gallery.rs  map.rs  mod.rs  preview.rs  render.rs  sse.rs
src/server_old/: mod.rs
templates/: index.html  style.css
templates/bar/: bar.html  item.html
templates/config/: docker-compose.yml  nginx.conf  systemd.service
templates/gallery/: gallery.html  list.html
templates/preview/: preview.html
templates/web/: index.html  style.css
templates/web/bar/: bar.html  item.html  search.html
templates/web/gallery/: gallery.html  list.html  media.html
templates/web/map/: map.html
templates/web/preview/: preview.html
tests/: api_media.rs  db_tests.rs  delete_on_archive_tests.rs  search_tests.rs  server_tests.rs
tests/common/: mod.rs
