[package]
name = "spis"
version = "0.9.7"
edition = "2024"

# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

# https://corrode.dev/blog/tips-for-faster-rust-compile-times/
[profile.dev.build-override]
opt-level = 3

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[features]
default = []
dev = ["dep:actix", "dep:actix-web-actors"]

[dependencies]
# Basics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
dotenv = "0.15"
color-eyre = "0.6"
thiserror = "2.0.0"
clap = { version = "4", features = ["derive", "env"] }

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-cron-scheduler = "2"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "migrate",
  "uuid",
] }

# Web
actix-web = "4"
tracing-actix-web = "0.7.9"
askama = { version = "0.13.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7.1"

# Processing
walkdir = "2"
rayon = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.32", features = ["serde"] }
notify = "8.0.0"

# Image processing
image = { version = "0.25.0", features = ["jpeg", "webp"] }
kamadak-exif = "0.6"

# Video processing
which = "7.0"
subprocess = "0.2"
md-5 = "0.10"

# Bake GUI into bin
include_dir = { version = "0.7.3", features = ["glob"] }

# Dev websocket
actix = { version = "0.13.1", optional = true }
actix-web-actors = { version = "4.2.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
