[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
axum = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"