[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
spis-model = { path = "../spis-model" }
chrono = { version = "0.4" }

reqwasm = "0.4"
sycamore = { version = "0.8", features = ["suspense"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wasm-bindgen = "0.2"

log = "0.4.14"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"