[package]
name = "gui"
version = "0.4.6"
edition = "2021"

[dependencies]
# Model
spis-model = { path = "../spis-model" }
chrono = { version = "0.4" }
serde_qs = "0.11"

# Logging
log = "0.4.14"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"

# Web
sycamore = { version = "0.8", features = ["suspense"] }
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["KeyboardEvent", "Touch", "TouchEvent", "TouchList"] }
wasm-bindgen = "0.2"
