[package]
name = "spis-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spis-server"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
dotenv = "0.15"
eyre = "0.6"

actix-web = "4"
spis-model = { path = "../spis-model" }
serde = { version = "1", features = ["derive"] }

walkdir = "2"
rayon = "1"

md5 = "0.7"
image = { version = "0.24.4", features = ["jpeg", "webp-encoder"]}
kamadak-exif = "0.5"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono", "migrate", "uuid"] }

[dev-dependencies]
reqwest = "0.11"
ctor = "0.1"
tempfile = "3"