[package]
name = "spis-server"
version = "0.5.7"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spis-server"

[features]
default = []
release = ["dep:include_dir"]

[dependencies]
# Basics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
dotenv = "0.15"
color-eyre = "0.6"
config = "0.13"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99.17"

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
actix-web = "4"
tracing-actix-web = "0.7.9"
async-cron-scheduler = "2"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "migrate",
  "uuid",
] }

# Model
spis-model = { path = "../spis-model" }
serde = { version = "1", features = ["derive"] }

# Processing
walkdir = "2"
rayon = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
notify = "6.1.1"

# Image processing
image = { version = "0.24.8", features = ["jpeg", "webp-encoder"] }
kamadak-exif = "0.5"

# Video processing
which = "5.0"
subprocess = "0.2"
md-5 = "0.10"

# Bake GUI into bin
include_dir = { version = "0.7.3", features = ["glob"], optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
